Fix spacing beneath credits

--- a/main.css
+++ b/main.css
@@ -178,4 +178,5 @@ a {
 
 #credits {
     padding-left: 30px;
+    padding-bottom: 25px;
 }
